Full Implementation (#4)
* (GP-2.1.1): Repository Initialization Testing

see README for tester changes

* Halfway to 2.3.1

some progress has been made

* (GP-2.3.1): Blob Creation Testing

implemented new tests to create and remove blobs. See README for more details.

* (GP-2.4.1): Index Updating Testing

See README for more details

* (GP-2.4.2): Created File Removal testing

adds tester functionality to clear all created files. See README for more details. .gitignore updated to ignore .txt files

* Various bug fixes

the removal now actually works, and some code was cleared up in the Git project to remove the starting empty line in the Index file.